# SofaQtQuick

./: .gitignore  CMakeLists.txt  README.md
SofaQtQuickGUI/SofaQtQuickGUI_test/: CMakeLists.txt  SofaSceneModel_test.h
applications-dev/plugins/QmlUI/: CMakeLists.txt  QmlUIConfig.cmake.in
applications-dev/plugins/QmlUI/data/qml/: DefaultCanvas.qml
applications-dev/plugins/QmlUI/src/QmlUI/: Canvas.cpp  Canvas.h  initQmlUI.cpp  initQmlUI.h
applications-dev/plugins/SofaQtQuickGUI/: CMakeLists.txt  Camera.cpp  Camera.h  CameraView.h  Console.cpp  Console.h  ControlledSofaViewer.cpp  ControlledSofaViewer.h  DataListModel.cpp  DataListModel.h  DefaultApplication.cpp  DefaultApplication.h  LiveFileMonitor.cpp  LiveFileMonitor.h  Manipulator.cpp  Manipulator.h  Manipulator2D_Rotation.cpp  Manipulator2D_Rotation.h  Manipulator2D_Translation.cpp  Manipulator2D_Translation.h  Manipulator3D_Rotation.cpp  Manipulator3D_Rotation.h  Manipulator3D_Translation.cpp  Manipulator3D_Translation.h  ObjectRenderer.h  ParticleInteractor.cpp  ParticleInteractor.h  PickingInteractor.cpp  PickingInteractor.h  PythonConsole.cpp  PythonConsole.h  PythonInteractor.cpp  PythonInteractor.h  RuntimeViewer.cpp  RuntimeViewer.h  Scene.cpp  Scene.h  SceneComponent.cpp  SceneComponent.h  SceneData.cpp  (+52 more)
applications-dev/plugins/SofaQtQuickGUI/SofaQtQuickGUI_test/: CMakeLists.txt  QmlGTest.cpp  QmlGTest.h  SofaApplication_test.cpp  SofaBase_test.cpp  SofaBase_test.h  SofaSceneModel_test.cpp  SofaSceneModel_test.h  SofaScene_test.cpp  SofaScene_test.cpp.autosave  SofaScene_test.h  main.cpp
applications-dev/plugins/SofaQtQuickGUI/SofaQtQuickGUI_test/data/: test_minimal.xml
applications-dev/plugins/SofaQtQuickGUI/SofaQtQuickGUI_test/data/qmltests/: SofaBase_test.qml  SofaData_test.qml  SofaFactory_test.qml  SofaLink_test.qml  SofaNode_test.qml
applications-dev/plugins/SofaQtQuickGUI/SofaQtQuickGUI_test/qmltests/: SofaBase_test.qml  tst_SofaBase.qml
applications-dev/plugins/SofaQtQuickGUI/data/: resources.qrc  sofaQtQuickGUI_resources.qrc
applications-dev/plugins/SofaQtQuickGUI/data/config/: classic.ini  default.ini  fullview.ini  quadview.ini
applications-dev/plugins/SofaQtQuickGUI/data/config/templates/: MeshAsset.py  PythonAsset.py  stlAsset.py
applications-dev/plugins/SofaQtQuickGUI/data/icon/: README
applications-dev/plugins/SofaQtQuickGUI/data/python/: PythonConsole.py  SofaQtQuick.py  graph_serialization.py
applications-dev/plugins/SofaQtQuickGUI/data/python/templates/: createPrefab.py  emptyController.py  emptyDataEngine.py  emptyForceField.py  emptyPrefab.py  openobjInBlender.py  openstlInBlender.py
applications-dev/plugins/SofaQtQuickGUI/data/qml/: AssetView.qml  qml.qrc  sofaQtQuickGUI_qml.qrc
applications-dev/plugins/SofaQtQuickGUI/data/qml/CustomInspectorWidgets/: BaseInspector.qml  CustomInspector.qml  MeshLoaderInspector.qml  qmldir
applications-dev/plugins/SofaQtQuickGUI/data/qml/GTest/: GTest.qml  qmldir
applications-dev/plugins/SofaQtQuickGUI/data/qml/QmlGTestCase/: QmlGTestCase.qml  qmldir
applications-dev/plugins/SofaQtQuickGUI/data/qml/SofaApplication/: MainStyle.qml  SofaApplication.qml  qmldir
applications-dev/plugins/SofaQtQuickGUI/data/qml/SofaBasics/: BubbleToolTip.qml  Button.qml  CheckBox.qml  ClipPlane.qml  CollapsibleGroupBox.qml  ColorChooser.qml  ComboBox.qml  ContentItem.qml  DataItem.qml  DataListModel.qml  DefaultMenuBar.qml  DefaultQmlUICanvas.qml  (+65 more)
applications-dev/plugins/SofaQtQuickGUI/data/scene/: callPythonByControllerName.py  callPythonByControllerName.py.qml
applications-dev/plugins/SofaQtQuickGUI/examples/: ClipPlaneWidget.py  ClipPlaneWidget.qml  caduceusCamera.qml  caduceusWithFullQML.scn.qml  caduceusWithManipulator.py  caduceusWithManipulator.scn  caduceusWithManipulator.scn.qml  callPythonInDialogBoxQML.py.qml  callPythonInDynamicQML.py  callPythonInDynamicQML.py.qml  callPythonInQML.py  callPythonInQML.py.qml  linkDataInQML.py.qml  sample0.py  sceneCustomInteractor.py  sceneCustomInteractor.py.qml  test0 copy.py  test0.py  test0.py copy.qml  test0.py.qml  torusWithManipulator.py  torusWithManipulator.py.qml  torusWithManipulator.qml
applications-dev/plugins/SofaQtQuickGUI/examples/beamWithSlidersUandSimuSeparated/: beamSimulationWithSliders.py  beamSimulationWithSliders.py.qml  beamU.py
applications-dev/plugins/SofaQtQuickGUI/examples/beamWithSlidersUandSimuSeparatedExtended/: beamSimulationWithSlidersExtended.py  beamUextended.py
applications-dev/plugins/SofaQtQuickGUI/helper/: QMathExtensions.h
applications-dev/plugins/SofaQtQuickGUI/src/SofaQtQuickGUI/: Camera.cpp  Camera.h  Console.cpp  Console.h  DataHelper.cpp  DataHelper.h  LiveFileMonitor.cpp  LiveFileMonitor.h  LiveInterfaceEditor.h  LiveQMLFileMonitor.cpp  LiveQMLFileMonitor.h  Manipulator.cpp  Manipulator.h  Manipulator2D_Translation.cpp  Manipulator2D_Translation.h  Manipulator3D_Rotation.cpp  Manipulator3D_Rotation.h  Manipulator3D_Translation.h  ProcessState.h  ProfilerTreeView.cpp  ProfilerTreeView.h  ProfilerTreeViewModel.cpp  ProfilerTreeViewModel.h  Python3Console.cpp  PythonConsole.cpp  PythonConsole.h  RuntimeViewer.cpp  RuntimeViewer.h  Selectable.cpp  Selectable.h  SelectableManipulator.cpp  SelectableManipulator.h  SelectableSofaComponent.cpp  SelectableSofaComponent.h  SelectableSofaParticle.cpp  SelectableSofaParticle.h  SofaApplication.cpp  SofaApplication.h  SofaBaseApplication.cpp  SofaBaseApplication.h  (+36 more)
applications-dev/plugins/SofaQtQuickGUI/windows/: CameraView.cpp  CameraView.h  EditView.cpp  EditView.h
applications-dev/plugins/image_qtquickgui/: CMakeLists.txt  ImagePlaneModel.cpp  ImagePlaneModel.h  ImagePlaneView.cpp  ImagePlaneView.h  ImageQtQuickGUI.cpp
applications-dev/plugins/image_qtquickgui/data/qml/: qml.qrc
applications-dev/plugins/image_qtquickgui/examples/: cropFilter.py  imagePlaneController.py  imagePlaneController.qml
applications-dev/projects/runSofa2/: CMakeLists.txt  Main.cpp  QMLAppEngine.cpp  QMLAppEngine.h  RS2Application.cpp  RS2Application.h  runSofa2.h.in
applications-dev/projects/runSofa2/data/qml/: Main.qml
(+475 files in other folders)
